src/components/ContactAvailability.css
.contact_availability_page {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100%;
    margin: 0 auto;
}

.contact_availability_container {
    display: flex;
    flex-direction: column;
    width: 75%;
    max-width: 1200px;
    margin: 100px 0 30px 0;
}
.contact_availability {
    display: flex;
    justify-content: center;
    align-items: center;
}
.contact_availability_shift, .contact_availability_day {
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 16px;
    padding: 32px;
    margin: 1px;
    border-radius: 2px;
    color: white;
}

.contact_availability_day {
    cursor: text;
    background: rgba(216, 73, 73, 85);
}

.contact_availability_day-container {
    display: flex;
    width: 14.26%;
    flex-direction: column;
}

.contact_redirect_btn {
    border: solid;
    margin-top: 60px;
    padding: 15px;
    font-size: 20px;
    width: 100%;
    max-width: 1200px;
}

@media only screen and (max-width: 1400px) {
    .contact_availability_container {
        width: 80%
    }
}

@media only screen and (max-width: 1200px) {
    .contact_availability_container {
        width: 90%
    }
}

@media only screen and (max-width: 1000px) {
    .contact_availability_container {
        width: 98%
    }
} 

@media only screen and (max-width: 880px) {
    .contact_availability_container {
        width: 98%;
    }
    
    .contact_availability_shift, .contact_availability_day {
        font-size: 12px;
    }
}
@media only screen and (max-width: 768px) {
    .contact_availability {
        width: 100%;
        flex-direction: column;
    }

    .contact_availability_day-container {
        display: flex;
        align-content: center;
        width: 100%;
        flex-direction: row;
    }
    
    .contact_availability_shift, .contact_availability_day {
        width: 24.5%;
    }
}

